@@ -203,12 +203,10 @@
       <artifactId>mcf-ui-core</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <!-- try installing manually from http://jcifs.samba.org if not available 
-      in your repository -->
     <dependency>
-      <groupId>org.codelibs</groupId>
-      <artifactId>jcifs</artifactId>
-      <version>1.3.18.3</version>
+      <groupId>eu.agno3.jcifs</groupId>
+      <artifactId>jcifs-ng</artifactId>
+      <version>2.1.2</version/>
     </dependency>
     
     <!-- Testing dependencies -->
